--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Lucas Robitaille - Portfolio"
+    <meta name="description" content="Lucas Robitaille - Portfolio" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Maven+Pro&display=swap"
+      rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Lucas Robitaille</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
