--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Lucas Robitaille - Portfolio" />
     <link
-      href="https://fonts.googleapis.com/css?family=Maven+Pro&display=swap"
+      href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2&display=swap"
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
