--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Lucas Robitaille - Portfolio" />
+    <script
+      src="https://kit.fontawesome.com/1e6d351850.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2&display=swap"
       rel="stylesheet"
