--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Lucas Robitaille - Portfolio" />
+    <meta name="theme-color" content="#2b343f" />
+    <meta
+      name="description"
+      content="Lucas Robitaille, Web Developer, Software Engineer, Full Stack, Frontend, Backend, Javascript"
+    />
     <script
       src="https://kit.fontawesome.com/1e6d351850.js"
       crossorigin="anonymous"
