made chrome theme darker

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#2b343f" />
+    <meta name="theme-color" content="#15191e" />
     <meta
       name="description"
       content="Lucas Robitaille, Web Developer, Software Engineer, Full Stack, Frontend, Backend, Javascript"
