--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div data-netlify-recaptcha="true"></div>
   </body>
 </html>
