added netlify form integration for react

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#1f262e" />
     <meta
       name="description"
-      content="Lucas Robitaille, Web Developer, Software Engineer, Full Stack, Frontend, Backend, Javascript"
+      content="Lucas Robitaille Portfolio, Web Developer, Software Engineer, Full Stack, Frontend, Backend, Javascript"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -21,11 +21,10 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Lucas Robitaille</title>
+    <title>Lucas Robitaille - Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div data-netlify-recaptcha="true"></div>
   </body>
 </html>
