--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1f262e" />
-    <meta
-      name="description"
-      content="Lucas Robitaille Portfolio, Web Developer, Software Engineer, Full Stack, Frontend, Backend, Javascript"
-    />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <script
-      src="https://kit.fontawesome.com/1e6d351850.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Lucas Robitaille - Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-  </body>
+    <head>
+        <meta charset="utf-8"/>
+        <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <meta content="#1f262e" name="theme-color"/>
+        <meta content="Lucas Robitaille Portfolio, Web Developer, Software Engineer, Full Stack, Frontend, Backend, Javascript" name="description"/>
+        <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+        <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
+        <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
+        <link href="/site.webmanifest" rel="manifest"/>
+        <script crossorigin="anonymous" src="https://kit.fontawesome.com/1e6d351850.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2&display=swap" rel="stylesheet"/>
+        <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
+        <title>Lucas Robitaille - Portfolio</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <script async defer src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"></script>
+    </body>
 </html>
