--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,17 @@
         <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2&display=swap" rel="stylesheet"/>
         <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
         <title>Lucas Robitaille - Portfolio</title>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-R6SXHD3Q3B"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-R6SXHD3Q3B');
+        </script>
     </head>
     <body>
         <div id="root"></div>
